# lesson-19

./: .gitignore  pyproject.toml  requirements.txt
tests/app/: conftest.py  test_wikipedia.py
tests/web/: conftest.py  test_wikipedia.py
